<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_EXECUTE_SECTION1" Id="{6ef0d8b3-28c4-4ccd-927f-c06f71faa18c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EXECUTE_SECTION1
VAR_INPUT
	StartTest : BOOL; // Tells this FB to start its checks
END_VAR

VAR_OUTPUT
	Done : BOOL; // Goes True when FB finishes its checks
END_VAR

VAR_IN_OUT
END_VAR

VAR
	i : INT;	
	state : INT; // internal step for the FB's state machine
	AddStep: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF StartTest THEN
	Done   := FALSE;
    CASE state OF
        0:
			// DIGITAL INPUTS
			FOR i := 0 TO CONSTANTS.SECTION1_NUM_DIG_TESTS - 1 DO
				IF GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].LIVE_BOOL = GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].EXPECTED_BOOL THEN
					GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].RESULT := 'PASS';
				ELSE
					GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].RESULT := 'FAIL';
				END_IF
			END_FOR
			
			FOR i := 0 TO CONSTANTS.SECTION1_NUM_HMI_TESTS -1 DO
				IF GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].LIVE_BOOL = GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].EXPECTED_BOOL THEN
					GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].RESULT := 'PASS';
				ELSE
					GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[i].RESULT := 'FAIL';
				END_IF
			END_FOR
			
			state := 999;
            
        999:
            // done
			Done := TRUE;
			state := 0;
        ;

    END_CASE;
ELSE
    // if StartTest = FALSE, reset
    Done   := FALSE;
    state  := 0;
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>